Closed
Bug 734978
Opened 14 years ago
Closed 14 years ago
JS OOM Testing: Assertion failure: cx->typeInferenceEnabled() && hasLazyType(), at js/src/jsinfer.cpp:5695
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: decoder, Unassigned)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
15.98 KB,
text/plain
|
Details | |
|
1.24 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
The following command aborts on mozilla-central revision c6f26a8dcd08:
js -m -n -a -A 6284 -f js/src/jit-test/tests/jaeger/bug582286.js
Attached is the log with backtraces of all failed allocations (as outputted when compiling with --enable-oom-backtrace and filtered through addr2line).
Comment 1•14 years ago
|
||
JSObject::makeLazyType should be able to cope with the case where TI is disabled, as this can happen when types were previously nuked.
Attachment #613624 -
Flags: review?(luke)
Updated•14 years ago
|
Attachment #613624 -
Flags: review?(luke) → review+
Comment 2•14 years ago
|
||
Comment 3•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in
before you can comment on or make changes to this bug.
Description
•