Avoid assert botch in makeLazyType after types have been nuked, bug 734978. r=luke